WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248048
Images fail to load periodically on ikea.com
https://bugs.webkit.org/show_bug.cgi?id=248048
Summary
Images fail to load periodically on ikea.com
Brandon
Reported
2022-11-17 10:42:56 PST
<
rdar://101657305
>
Attachments
Add attachment
proposed patch, testcase, etc.
Brandon
Comment 1
2022-11-17 10:45:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6595
EWS
Comment 2
2022-11-18 13:37:21 PST
Committed
256854@main
(5e60d4e7a72a): <
https://commits.webkit.org/256854@main
> Reviewed commits have been landed. Closing PR #6595 and removing active labels.
Karl Dubost
Comment 3
2022-11-20 21:25:54 PST
SeeAlso
https://github.com/webcompat/web-bugs/issues/113635
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug