Cherry-pick 256854@main (5e60d4e7a72a). https://bugs.webkit.org/show_bug.cgi?id=248048

Images fail to load periodically on ikea.com
    https://bugs.webkit.org/show_bug.cgi?id=248048
    rdar://101657305

    Reviewed by Chris Dumez.

    Adding a quirk to address images showing up as grey boxes on ikea.com.
    Disabling lazy image loading addresses an issue that was found
    in gatsby. This issue has been addressed in a future version of gatsby.

    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::lazyImageLoadingEnabled const):
    * Source/WebCore/dom/Document.h:
    * Source/WebCore/html/parser/HTMLPreloadScanner.cpp:
    (WebCore::TokenPreloadScanner::StartTagScanner::processAttribute):
    * Source/WebCore/loader/ImageLoader.cpp:
    (WebCore::ImageLoader::updateFromElement):
    * Source/WebCore/page/Quirks.cpp:
    (WebCore::Quirks::shouldExposeShowModalDialog const):
    (WebCore::Quirks::shouldDisableLazyImageLoading const):
    * Source/WebCore/page/Quirks.h:

    Canonical link: https://commits.webkit.org/256854@main