Source/WebCore/dom/Document.cpp
@@ -9251,6 +9251,11 @@ bool Document::isSameSiteForCookies(const URL& url) const
     return domain.matches(url);
 }
 
+bool Document::lazyImageLoadingEnabled() const
+{
+    return m_settings->lazyImageLoadingEnabled() && !m_quirks->shouldDisableLazyImageLoadingQuirk();
+}
+
 } // namespace WebCore
 
 #undef DOCUMENT_RELEASE_LOG
